Fixed vertical alignment of file icon images.

--- a/sass/pw_theme.scss
+++ b/sass/pw_theme.scss
@@ -108,6 +108,10 @@ hr {
 
 img {
   vertical-align: bottom;
+
+  &.file-icon {
+    vertical-align: middle;
+  }
 }
 
 .marker {
